Fixed gap in gallery section

--- a/src/container/Gallery/Gallery.scss
+++ b/src/container/Gallery/Gallery.scss
@@ -1,3 +1,8 @@
+#gallery{
+    min-height: 65vh;
+}
+
+
 .main_container{
     display: flex;
     justify-content: space-evenly;
